# githubclient

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tests.yml
docs/: write-up.md  writeup.md
example/: sample.py  sample_doc01.md  sample_doc02.md
requirements/: requirements-dev.txt  requirements-test.txt
src/: gitclient.py  prfile.py
src/githubclient/: apiclient.py  apimetrics.py  gitapi.py  gitclient.py  gitclient.pyi  httpclient.py  prfile.py  repoactions.py
tests/: apiclient_test.py  httpclient_test.py  prfile_test.py  repoactions_test.py
tests/fixtures/: .repoconfig_test.toml  add_labels_success.yaml  create_blobs_success.yaml  create_branch_fail.yaml  create_branch_success.yaml  create_commit_success.yaml  create_pr_success.yaml  create_tree_success.yaml  get_branch_fail.yaml  get_branch_success.yaml  repoconfig_test.ini  test_get.yaml  test_post.yaml  update_ref_success.yaml
