[metadata]
name = preocts_githubclient
version = 0.2.0
description = Create branch, add file, and make pull request using GitHub API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Preocts/gitclient
author = Preocts
author_email = preocts@preocts.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    colorama>=0.4.4
    secretbox>=1.2.0
    toml==0.10.2
    urllib3>=1.26.6
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
branch = True
source = tests
source_pkgs =
    githubclient

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImlementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = coverage.xml
